--- a/css/index.css
+++ b/css/index.css
@@ -136,7 +136,7 @@ main {
 
 .container .card img {
     display: block;
-    width: 50%;
+    height: 200px;
     margin: 0 auto; /* Add this line */
 }
 
@@ -168,6 +168,7 @@ main {
     margin-left: 50px;
     margin-right: 50px;
     object-fit: contain; /* Maintain aspect ratio */
+    cursor: pointer;
 }
 
 /* RESPONSIVE */
